--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-react": "^4.2.3",
     "jsdom": "^8.1.0",
+    "mobx": "^3.0.0",
+    "mobx-react": "^4.1.0",
     "mocha": "^2.4.5",
     "nodemon": "^1.9.1",
     "react": "^15.0.0",
